## Process this file with automake to produce Makefile.in

all: 

EXTRA_DIST = \
    ChangeLog LostLog admon.xsl autotoc.xsl biblio.xsl block.xsl callout.xsl \
    changebars.xsl chunk-common.xsl chunk.xsl component.xsl division.xsl \
    docbook.xsl ebnf.xsl footnote.xsl formal.xsl glossary.xsl graphics.xsl \
    html.xsl index.xsl info.xsl inline.xsl keywords.xsl lists.xsl math.xsl \
    param.xsl pi.xsl qandaset.xsl refentry.xsl sections.xsl synop.xsl \
    table.xsl titlepage.templates.xml titlepage.templates.xsl titlepage.xsl \
    toc.xsl verbatim.xsl xref.xsl xtchunk.xsl
